# projectX

./: .air.toml  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template  README.md  build-release.sh  init.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake-multi-platform.yml  zephyr-build.yml  zephyr.yml
.local/linux-x64/include/dds/: export.h  features.h  version.h
.local/linux-x64/include/event2/: event-config.h
.local/linux-x64/include/idl/: export.h
.local/linux-x64/include/libidlc/: libidlc_export.h
.local/linux-x64/lib/: libPocoActiveRecord.so.111  libPocoCrypto.so.111  libPocoData.so.111  libPocoDataSQLite.so.111  libPocoEncodings.so.111  libPocoFoundation.so.111  libPocoJSON.so.111  libPocoNet.so.111  libPocoNetSSL.so.111  libPocoPrometheus.so.111  libPocoUtil.so.111  libPocoXML.so.111  libPocoZip.so.111  libcycloneddsidl.so.0.11.0  libcycloneddsidlc.so.0.11.0  librocksdb.so.10  libuv.so.1.0.0
.local/linux-x64/lib/cmake/CURL/: CURLConfig.cmake  CURLTargets-release.cmake  CURLTargets.cmake
.local/linux-x64/lib/cmake/CycloneDDS/: CycloneDDSTargets-release.cmake  CycloneDDSTargets.cmake
.local/linux-x64/lib/cmake/Poco/: PocoActiveRecordTargets-release.cmake  PocoActiveRecordTargets.cmake  PocoCryptoTargets-release.cmake  PocoCryptoTargets.cmake  PocoDataSQLiteTargets-release.cmake  PocoDataSQLiteTargets.cmake  PocoDataTargets-release.cmake  PocoDataTargets.cmake  PocoEncodingsTargets-release.cmake  PocoEncodingsTargets.cmake  PocoFoundationTargets-release.cmake  PocoFoundationTargets.cmake  PocoJSONTargets-release.cmake  PocoJSONTargets.cmake  PocoNetSSLTargets-release.cmake  PocoNetSSLTargets.cmake  PocoNetTargets-release.cmake  PocoNetTargets.cmake  PocoPrometheusTargets-release.cmake  PocoPrometheusTargets.cmake  PocoUtilTargets-release.cmake  PocoUtilTargets.cmake  PocoXMLTargets-release.cmake  PocoXMLTargets.cmake  PocoZipTargets-release.cmake  PocoZipTargets.cmake
.local/linux-x64/lib/cmake/cJSON/: cJSONConfig.cmake  cjson-noconfig.cmake  cjson.cmake
.local/linux-x64/lib/cmake/eclipse-paho-mqtt-c/: eclipse-paho-mqtt-cConfig.cmake
.local/linux-x64/lib/cmake/libevent/: LibeventConfig.cmake  LibeventTargets-static.cmake
.local/linux-x64/lib/pkgconfig/: CycloneDDS.pc  libcjson.pc  libcurl.pc  libevent.pc  libevent_core.pc  libevent_extra.pc  libevent_pthreads.pc  libmicrohttpd.pc  libuv-static.pc  libuv.pc  rocksdb.pc  sqlite3.pc
.local/linux-x64/libev/lib/: libev.so.4.0.0
.local/linux-x64/libyaml/cmake/: yamlTargets.cmake
.local/linux-x64/share/man/man1/: curl-config.1  (+4 more)
.local/staging/: README.md
cmake/: zephyr.cmake
cmake/toolchains/: arm-none-eabi.cmake  x64-linux-clang.cmake  x64-linux-gcc.cmake  x64-windows-cl.cmake  x64-windows-clang.cmake
cpp/cmd/: CMakeLists.txt  CMakeLists2.txt  example.c
cpp/cmd/firmware/boilerplate/: CMakeLists.txt  prj.conf
cpp/cmd/microservice/core-data/: CMakeLists.txt
cpp/src/: CMakeLists.txt  docker_manager.h  http_client_manager.c  http_client_manager.h  http_server_manager.c  leveldb_manager.c  serial_manager.c  service.c
docs/: dialogue.md  sentence.md  tense.md  wkt
firmware/boilerplate/: CMakeLists.txt  env.sh  main.c
go/: Dockerfile  README.md  config.yml  docker-compose.yml  go.sum
go/cmd/: main.go
go/data/: edge.db
go/internal/api/: devices.go  handler.go  server.go
go/internal/config/: config.go
go/internal/core/: processor.go
go/internal/mqtt/: client.go
go/internal/store/: memory.go  models.go  persistence.go
go/internal/web/: client.go  handlers.go  hub.go
go/web/: package-lock.json  package.json
go/web/templates/: control_panel.templ  dashboard.templ  device_form.templ  device_helpers.go  device_list.templ  devices.templ  layout.templ  navbar.templ  sensor_card.templ
gotth/: .air.toml  Makefile  README.md  app.db  d.js  go.sum  index.html  package-lock.json  package.json  sqlc.yaml
gotth/cmd/app/: main.go
gotth/db/migrations/: 000001_create_users_table.up.sql  000002_create_todos_table.up.sql
gotth/db/queries/: todo.sql  user.sql
gotth/devx/src/: index.ts
gotth/devx/src/commands/: db-migrate.ts  init.ts  plugin-add.ts  run.ts
gotth/devx/src/utils/: exec.ts  prompt.ts
gotth/devx/templates/frontend-tauri/: main.ts
gotth/devx/templates/service-go/: main.go
gotth/internal/auth/: password.go  session.go
gotth/internal/data/: database.go  models.go  querier.go  todo.sql.go  user.sql.go
gotth/internal/handler/: auth_handler.go  broadcaster.go  dashboard_handler.go  home_handler.go  todo_handler.go  ui_lab_handler.go
gotth/internal/middleware/: auth.go  context.go
gotth/public/: styles.css
gotth/scripts/seed/: main.go
gotth/view/layouts/: app.templ  base.templ
gotth/view/pages/: dashboard.templ  home.templ  login.templ  register.templ  todo.templ
gotth/view/shared/: todo_form.templ  todo_item.templ
gotth/view/shared/feedback/: alert.templ  modal.templ  toast.templ
gotth/view/ui_lab/: index.templ
gotth/view/ui_lab/sections/: buttons_forms_example.templ  feedback_example.templ  modal_content_example.templ  sse_example.templ  table_example.templ
microservice/: CMakeLists.txt
microservice/cmd/: ci.c
microservice/cmd/core-command/: core-command.c
microservice/cmd/core-data/: CMakeLists.txt  core-data.c
microservice/cmd/desktop/: desktop-ui.cpp
microservice/cmd/south/: south.c
microservice/include/: common.h  service.h
microservice/src/: CMakeLists.txt  acq.h  docker_manager.c  domain.h  http-server.h  http_server_manager.h  http_server_mhd.h  leveldb_manager.h  mqtt_client_manager.c  mqtt_client_manager.h  serial_manager.h  sqlite_manager.c  sqlite_manager.h
qt-boilerplate/: CMakeLists.txt  main.cpp
qt-boilerplate/cmd/gui/: CMakeLists.txt  Main.qml  main.cpp  viewModel.cpp  viewmodel.h
qt-boilerplate/core/: ILoginService.h  UserInfo.h
qt-boilerplate/services/: CMakeLists.txt  LoginService.cpp  LoginService.h
rust/: Cargo.toml  README.md
rust/mcu/: Cargo.toml
rust/server/: Cargo.toml
rust/server/src/: main.rs
scripts/: idis_objects_from_text.yaml  v1.py
(+516 files in other folders)
