[workspace]
members=["client", "mcu","server", "share"]
resolver="3"

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["full"] }
serde = {version = "1.0.226",features=["derive"]}
serde_json = "1.0.145"
serde_yaml = "0.9.34"
cortex-m = "0.7.7"
log = "0.4.28"
rand = "0.9.2"
regex = "1.11.3"
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
axum = "0.8.4"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
