[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {workspace=true,optional=true}
chrono = {workspace=true,optional=true}
clap = {workspace=true,optional=true}
cortex-m = {workspace=true,optional=true}
log = {workspace=true,optional=true}
rand = {workspace=true,optional=true}
regex = {workspace=true,optional=true}
reqwest = {workspace=true,optional=true}
serde = {workspace=true,optional=true}
serde_json = {workspace=true,optional=true}
serde_yaml = {workspace=true,optional=true}
sqlx = {workspace=true,optional=true}
thiserror = {workspace=true,optional=true}
tokio = { workspace = true}
tracing = {workspace=true,optional=true}
tracing-subscriber = {workspace=true,optional=true}

[features]
default = []
yaml = ["serde","serde_yaml"]
